--- a/secciones/sobre_mi/sobre_mi.css
+++ b/secciones/sobre_mi/sobre_mi.css
@@ -1,144 +1,20 @@
-/**
- * .section-about: Sección "Acerca de"
- *
- * @format
- */
-
-/* .about-box: Contenedor de la sección "Acerca de" */
-.about-box {
-  :root {
-    /* Colores principales */
-    --color-menu: #90e0ef;
-    --color-primario: #007bff;
-    --color-secundario: #0077b6;
-    --color-terciario: #00b4d8;
-    --color-texto: #ffffff;
-    --color-subtitulo: #ffffff;
-    --color-titulo: #ffffff;
-    --color-titulo-grande: #ffffff;
-
-    /* Medidas textos */
-    --medida-texto: 1.1rem;
-    --medida-texto-extra-grande: 1.5rem;
-    --medida-texto-extra-reducido: 0.6rem;
-    --medida-texto-grande: 1.3rem;
-    --medida-texto-mediano: 1rem;
-    --medida-texto-reducido: 1rem;
-
-    /* Medidas títulos */
-    --medida-titulo: 2.2rem;
-    --medida-titulo-extra-grande: 3rem;
-    --medida-titulo-extra-reducido: 0.5rem;
-    --medida-titulo-grande: 2.8rem;
-    --medida-titulo-mediano: 2rem;
-    --medida-titulo-reducido: 1.8rem;
-  }
-
-  body {
-    max-width: 100%;
-    max-height: 80vh;
-    width: 100%;
-    background: url("/images/background/bk.jpg"), inherit, transparent;
-    color: var(--color-texto);
-  }
-
-  #inteligencia-negocios {
-    background-color: inherit;
-    color: var(--color-titulo);
-    font-size: var(--medida-texto-reducido);
-  }
-
-  .contenedor__bi {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-    margin: 0 auto;
-    padding: 1em;
-    box-sizing: border-box;
-    height: 80vh;
-  }
-
-  .bi__elemento {
-    padding: 1em;
-    border-radius: 1px;
-    flex-grow: 7;
-    height: 100vh;
-    max-width: 100vh;
-    width: 80%;
-    flex-flow: column wrap;
-  }
-
-  .kpi__titulo,
-  .estadisticas__titulo,
-  .predicciones__titulo,
-  .dolar__titulo {
-    color: var(--color-menu);
-    font-size: var(--medida-titulo-mediano);
-    text-align: center;
-  }
-
-  .kpi__valor {
-    font-size: var(--medida-texto);
-  }
-
-  #valor-minimo {
-    color: rgb(152, 152, 219);
-  }
-
-  #valor-maximo {
-    color: rgb(106, 137, 106);
-  }
-
-  #valor-promedio {
-    color: rgb(184, 96, 96);
-  }
-
-  #valor-api {
-    color: orange;
-  }
-
-  .estadisticas__etiqueta,
-  .estadisticas__input,
-  .estadisticas__boton {
-    color: var(--color-menu);
-  }
-
-  .estadisticas__graficos {
-    margin-top: 2px;
-  }
-
-  .estadisticas__grafico {
-    margin-top: 2px;
-  }
-
-  /* Ajustes responsivos */
-  @media (max-width: 900px) {
-    .contenedor__bi {
-      grid-template-columns: 1fr;
-    }
-  }
-
-  margin: var(--margen-reducido), 1rem;
-  color: var(--color-texto);
+.coontenedor__flex {
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  justify-content: space-around;
-  align-items: flex-end;
-  text-shadow: 1px 1px 1px var(--color-paleta5);
 }
 
-/* .about-column: Información Personal */
-.about-column {
+#inteligencia-negocios {
+  background-color: inherit;
+  color: var(--color-titulo);
+}
+
+.sobre__mi__columna {
   flex: 1;
-
   text-align: justify;
-  border-radius: 2rem;
-  margin-left: 1rem;
+  margin-left: 2rem;
+  margin-top: 2rem;
 }
 
-/* .about_column_skill: Habilidades en la sección "Acerca de" */
-.about_column_skill {
+.sobre__mi__movimiento_skills {
   margin-top: 5rem;
 
   margin-left: 8rem;
@@ -151,22 +27,27 @@
   background-repeat: no-repeat;
 }
 
-/* ? revisar luego 
 @keyframes cambiarImagen {
-	0%,
-	100% {
-		background-image: url("../../images/logo.png");
-	}
-	25% {
-		background-image: url("../../images/logomin.webp");
-	}
-	50% {
-		background-image: url("../../images/logo.gif");
-	}
-	75% {
-		background-image: url("../../images/logo.webp");
-	}
-} */
+  0%,
+  100% {
+    background-image: url("../../images/logo.png");
+  }
+  25% {
+    background-image: url("../../images/logomin.webp");
+  }
+  50% {
+    background-image: url("../../images/logo.png");
+  }
+  75% {
+    background-image: url("../../images/logo96.jpg");
+  }
+}
+
+.cambiarlogo {
+  width: 200px;
+  height: 200px;
+  animation: cambiarImagen 10s infinite;
+}
 
 /* Contenedor de habilidades */
 #movimiento_skills {
@@ -224,63 +105,22 @@
   background-color: var(--color-primary);
 }
 
-/* .section-about: Sección "Acerca de" */
-.section-about {
-  display: flex;
-  padding: 1rem;
-  transition: all 0.8s;
-  background-color: transparent;
-  height: 100vh;
-  font-size: var(--medida-texto), 2rem;
-}
-
-/* .about-box: Contenedor de la sección "Acerca de" */
-.about-box {
-  color: var(--color-texto);
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  align-items: stretch;
-  text-shadow: 1px 1px 1px var(--color-paleta5);
-}
-
-/* .about-column: Información Personal */
-.about-column {
-  flex: 1;
-
-  text-align: justify;
-  border-radius: 2rem;
-}
-
-/* .about_column_skill: Habilidades en la sección "Acerca de" */
-
-/* Contenedor de habilidades */
-#movimiento_skills {
-  perspective: 1000px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-/* Ajustes de las columnas */
-.about-column,
-.about_column_skill {
-  flex: 1;
+#movimiento_skills img {
+  max-width: 4rem;
 }
 
 /* Ajustes para pantallas pequeñas */
 @media (max-width: 768px) {
-  .about-box {
+  .coontenedor__flex {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
   }
 
-  .about-column,
-  .about_column_skill {
+  .sobre__mi__columna,
+  .sobre__mi__movimiento_skills {
     max-width: 100%;
+    padding: 2rem;
   }
 }
 
