--- a/secciones/tecnologias/tecnologias.css
+++ b/secciones/tecnologias/tecnologias.css
@@ -1,7 +1,3 @@
-/** @format */
-
-@import url("../../estilos/estilo.css");
-
 /*************tecnologias **************/
 /* Estilo para la sección de habilidades */
 .section-skills {
@@ -15,6 +11,7 @@
 }
 
 .skills-title {
+  margin-top: 1rem;
   font-size: var(--size-texto);
 }
 
@@ -23,6 +20,7 @@
   flex-wrap: wrap;
   justify-content: center;
   list-style: none;
+  text-align: center;
   padding: 0;
 }
 
@@ -30,7 +28,7 @@
   font-size: var(--medida-texto-extra-reducido), 10px;
   position: relative;
   display: flex;
-  flex: 1 1 auto;
+  flex: 0 1 auto;
   perspective: 1000px;
   /* Establece una perspectiva para el efecto 3D */
   transition: all 0.4s;
@@ -49,7 +47,7 @@
   /* Tamaño fijo para las imágenes */
   margin-bottom: 0.5rem;
   object-fit: contain;
-  width: 5rem;
+  width: 4rem;
   /* Tamaño fijo para las imágenes */
 }
 
@@ -64,7 +62,7 @@
   padding: 0.5rem;
   border-radius: 5px;
   font-size: 5px;
-  width: 18rem;
+  width: 8rem;
   /* Ajusta el ancho según sea necesario */
   text-align: center;
 }
@@ -77,30 +75,4 @@
 .skills-name:hover p {
   display: block;
   /* Muestra la descripción al hacer hover */
-}
-
-/* Estilo para contenedor de proyectos */
-.project {
-  margin-bottom: 2rem;
-}
-
-/* Estilo para íconos sociales */
-.social-links {
-  align-items: center;
-  display: flex;
-  gap: 1.5rem;
-  justify-content: center;
-  margin-top: 2rem;
-}
-
-.social-icon {
-  color: var(--color-secondary);
-  font-size: 2rem;
-  transition: transform 1.3s, color 0.3s;
-}
-
-.social-icon:hover,
-.social-icon:active {
-  color: var(--color-primary);
-  transform: translateY(-5px);
 }
