--- a/secciones/habilidades/habilidades.css
+++ b/secciones/habilidades/habilidades.css
@@ -2,49 +2,69 @@
 /* Estilo para la sección de trabajos */
 
 .other-skills-list {
-	list-style: none;
-	text-align: center;
-	padding: 0;
-	transition: all 3s;
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  transition: all 3s;
 }
 
 .other-skills-item {
-	display: flex;
-	align-items: center;
-	gap: 1rem;
-	margin: 1rem 2rem;
-	opacity: 0;
-	transform: translateX(-20px);
-	transition: all 2s ease;
-	text-align: center;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin: 1rem 2rem;
+  opacity: 0.2;
+  transform: translateX(-20px);
+  transition: all 2s ease;
+  text-align: center;
 }
 
 .other-skills-item:hover {
-	transform: translateX(0);
-	opacity: 1;
-	background-color: var(--color-hover);
+  transform: translateX(0);
+  opacity: 1;
+  background-color: var(--color-hover);
 }
 
 .other-skills-item:nth-child(1) {
-	animation-delay: 6s;
+  animation-delay: 6s;
 }
 
 .other-skills-item:nth-child(2) {
-	animation-delay: 10s;
+  animation-delay: 10s;
 }
 
 .other-skills-item:nth-child(3) {
-	animation-delay: 3s;
+  animation-delay: 3s;
 }
 
 .other-skills-item:nth-child(4) {
-	animation-delay: 4s;
+  animation-delay: 4s;
 }
 
 .other-skills-item:nth-child(5) {
-	animation-delay: 6s;
+  animation-delay: 6s;
 }
 
 .other-skills-icon {
-	color: var(--color-primary);
+  color: var(--color-primary);
+}
+
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background-color: #fff;
+  /* Color de las estrellas */
+  animation: twinkle 5s infinite alternate;
+}
+
+@keyframes twinkle {
+  0% {
+    opacity: 0.2;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(-100vh);
+  }
 }
