--- a/estilos/css/modulos/navegacion_inicio.css
+++ b/estilos/css/modulos/navegacion_inicio.css
@@ -28,18 +28,25 @@
 
 .navbar__logo img {
   min-width: 2rem;
-  width: 2.2rem;
+  width: 2.4rem;
 }
 
 .navbar__menu {
   display: flex;
   list-style-type: none;
   padding: 0;
+  background: radial-gradient(circle, #61dafbaa, #282c34aa);
+  border-radius: 7px;
+  border-color: #61dafb;
+  box-shadow: inset 0 0 10px #61dafbaa;
+
+  color: #61dafb;
 }
 
 .navbar__menu-item {
   border-radius: 0.5rem;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
+  background-color: #00ffff55;
 }
 
 .navbar__menu-item a {
@@ -94,6 +101,13 @@
   flex-direction: column;
   cursor: pointer;
   margin-left: auto;
+
+  background: radial-gradient(circle, #61dafb22, #282c34aa);
+  border-radius: 3px;
+  border-color: #61dafb;
+  box-shadow: inset 0 0 1px #61dafbaa;
+
+  color: #61dafb;
 }
 
 /* Toggle de tema (oscuro/claro) */
@@ -127,6 +141,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-top: 2rem;
   }
 
   .navbar__menu.active {
@@ -147,7 +162,6 @@
     position: absolute;
     top: 2rem;
     left: 0;
-    background-color: var(--color-paleta4);
   }
 
   .navbar__menu-item {
